实现记录颜色主题

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://unpkg.com/codemirror@5.40.0/theme/xq-light.css">
-    <link rel="stylesheet" href="https://unpkg.com/codemirror@5.40.0/theme/material.css">
+    <link rel="stylesheet" href="https://unpkg.com/codemirror@5.40.0/theme/abcdef.css">
     <link rel="stylesheet" href="https://unpkg.com/codemirror@5.40.0/lib/codemirror.css">
     <link rel="stylesheet" href="https://unpkg.com/github-markdown-css@5.6.1/github-markdown-light.css" id="cssfile">
     <link rel="stylesheet" href="style.css"> 
