修改名称JustMark to DoingMark（因为发现重名产品）

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://unpkg.com/github-markdown-css@5.6.1/github-markdown-light.css" id="cssfile">
     <link rel="stylesheet" href="style.css"> 
     
-  <title>JustMark——专注于写作的Markdown编辑器</title>
+  <title>DoingMark——简单免费的网页端Markdown编辑器</title>
 </head>
 <body>
 <textarea id="edit">
